force-app/main/default/objects/RoyalMailSetting__c/RoyalMailSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Royal Mail Setting</label>
</CustomObject>