force-app/main/default/objects/RoyalMailSetting__c/fields/BagsPerParcel__c.field-meta.xml
<CustomField>
    <fullName>BagsPerParcel__c</fullName>
    <label>Bags Per Parcel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>