force-app/main/default/objects/RoyalMailSetting__c/fields/DeclaredWeight__c.field-meta.xml
<CustomField>
    <fullName>DeclaredWeight__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Declared Weight</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>