force-app/main/default/objects/RoyalMailSetting__c/fields/DescriptionOfGoods__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfGoods__c</fullName>
    <label>Description Of Goods</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>