force-app/main/default/objects/RoyalMailSetting__c/fields/ShippingAccountId__c.field-meta.xml
<CustomField>
    <fullName>ShippingAccountId__c</fullName>
    <label>Shipping Account Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>