force-app/main/default/objects/RoyalMailSetting__c/fields/ShippingLocationId__c.field-meta.xml
<CustomField>
    <fullName>ShippingLocationId__c</fullName>
    <label>Shipping Location Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>