force-app/main/default/objects/RoyalMailSetting__c/fields/StatusAtCarrierWarehouse1__c.field-meta.xml
<CustomField>
    <fullName>StatusAtCarrierWarehouse1__c</fullName>
    <label>Status: At Carrier Warehouse 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>