force-app/main/default/objects/RoyalMailSetting__c/fields/StatusAtCarrierWarehouse2__c.field-meta.xml
<CustomField>
    <fullName>StatusAtCarrierWarehouse2__c</fullName>
    <label>Status: At Carrier Warehouse 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>