force-app/main/default/objects/RoyalMailSetting__c/fields/StatusAtCarrierWarehouse3__c.field-meta.xml
<CustomField>
    <fullName>StatusAtCarrierWarehouse3__c</fullName>
    <label>Status: At Carrier Warehouse 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>