force-app/main/default/objects/RoyalMailSetting__c/fields/StatusCancelled__c.field-meta.xml
<CustomField>
    <fullName>StatusCancelled__c</fullName>
    <label>Status: Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>