force-app/main/default/objects/RoyalMailSetting__c/fields/StatusDelivered__c.field-meta.xml
<CustomField>
    <fullName>StatusDelivered__c</fullName>
    <label>Status: Delivered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>