force-app/main/default/objects/RoyalMailSetting__c/fields/StatusNotDelivered1__c.field-meta.xml
<CustomField>
    <fullName>StatusNotDelivered1__c</fullName>
    <label>Status: Not Delivered 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>