force-app/main/default/objects/RoyalMailSetting__c/fields/StatusNotDelivered2__c.field-meta.xml
<CustomField>
    <fullName>StatusNotDelivered2__c</fullName>
    <label>Status: Not Delivered 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>