force-app/main/default/objects/RoyalMailSetting__c/fields/StatusOutForDelivery__c.field-meta.xml
<CustomField>
    <fullName>StatusOutForDelivery__c</fullName>
    <label>Status: Out For Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>