force-app/main/default/objects/RoyalMailSetting__c/fields/StatusReceivedByCarrier__c.field-meta.xml
<CustomField>
    <fullName>StatusReceivedByCarrier__c</fullName>
    <label>Status: Received By Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>