force-app/main/default/objects/RoyalMailSetting__c/fields/StatusReturnedToSender__c.field-meta.xml
<CustomField>
    <fullName>StatusReturnedToSender__c</fullName>
    <label>Status: Returned to Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>