force-app/main/default/objects/RoyalMailSetting__c/fields/StatusReturningBackToSender1__c.field-meta.xml
<CustomField>
    <fullName>StatusReturningBackToSender1__c</fullName>
    <label>Status: Returning Back To Sender 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>