force-app/main/default/objects/RoyalMailSetting__c/fields/StatusReturningBackToSender2__c.field-meta.xml
<CustomField>
    <fullName>StatusReturningBackToSender2__c</fullName>
    <label>Status: Returning Back To Sender 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>