force-app/main/default/objects/RoyalMailSetting__c/fields/WireNumber__c.field-meta.xml
<CustomField>
    <fullName>WireNumber__c</fullName>
    <label>Wire Number</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>